# ffmpeg-example

./: .gitignore
app/: build.gradle  proguard-rules.pro
app/externalNativeBuild/cmake/debug/armeabi/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/externalNativeBuild/cmake/debug/armeabi-v7a/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/externalNativeBuild/cmake/release/armeabi/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/externalNativeBuild/cmake/release/armeabi-v7a/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/src/androidTest/java/tk/davinctor/jni3rdpartylibsample/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-3rd-party-lib.c  jni-3rd-party-lib.h  streaming.cpp
app/src/main/java/tk/davinctor/jni3rdpartylibsample/: AudioPlayer.java  FFmpegWrapper.java  MainActivity.java  VideoPlayer.java  VideoSurfaceView.java
app/src/main/jni/: AudioPlayer.cpp  AudioPlayer.h  audio_player.c  audio_player.h  audio_player_jni_wrapper.cpp  jni-3rd-party-lib.c  jni-3rd-party-lib.h  streaming.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/tk/davinctor/jni3rdpartylibsample/: ExampleUnitTest.java
